--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+@theme {
+    --color-*: initial;
+    --color-gray-50: oklch(0.985 0 0);
+    --color-gray-100: oklch(0.97 0 0);
+    --color-gray-200: oklch(0.922 0.001 247.858);
+    --color-gray-300: oklch(0.87 0.003 255.508);
+    --color-gray-400: oklch(0.709 0.005 256.311);
+    --color-gray-500: oklch(0.551 0.008 252.894);
+    --color-gray-600: oklch(0.446 0.008 256.802);
+    --color-gray-700: oklch(0.372 0.01 257.287);
+    --color-gray-800: oklch(0.279 0.009 260.031);
+    --color-gray-900: oklch(0.205 0.01 264.695);
+    --color-gray-950: oklch(0.145 0.005 264.531);
+}
+
+@variant dark (&:where(.dark, .dark *));
