--- a/Movie-app/src/components/Header.css
+++ b/Movie-app/src/components/Header.css
@@ -1,7 +1,8 @@
 .logo{
-    color:#00ff;
+    color:#ff0000;
     font-weight:bold;
     padding:15px;
+    margin-left: 10px;
 }
 .navbar{
     display:flex;
@@ -13,14 +14,41 @@
     display:flex;
     list-style:none;
     padding:25px;
+    margin-right: 10px;
     color:#fff;
     gap:20px;
 }
 .nav-links a{
     text-decoration:none;
-    color:#00ff;
+    color:#ff0000;
     font-weight:bold;
 }
 .nav-links a:hover{
     color:#fff;
+}
+.search-bar {
+  position: relative;
+  width: 300px;
+}
+
+.search-input {
+  width: 400px;
+  padding: 10px 12px 10px 40px; 
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  outline: none;
+}
+
+.search-input:focus {
+  border-color: #6366f1;
+}
+
+.search-icon {
+  position: absolute;
+  left: 12px;
+  top: 25%;
+  color: #9ca3af;
+  font-size: 16px;
+  pointer-events: none;
 }
