--- a/Movie-app/src/components/Footer.css
+++ b/Movie-app/src/components/Footer.css
@@ -1,7 +1,39 @@
-.footer{
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+.footer {
+  background-color: #ff0000;
+  color: #000;
+  margin-top: 30px;
+  position: relative;
+  bottom: 0;
+  padding: 10px;
+  position: fixed;
+  width: 100%;
+}
+.footer h3 {
+  font-size: 25px;
+  margin-bottom: 15px;
+  margin-top:15px;
+  color:#fff;
+
+}
+.quicklinks {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  gap: 20px;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+.quicklinks a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+.quicklinks a:hover {
+  color: #000;
+}
+.footer p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color:#fff;
 }
