--- a/Movie-app/src/index.css
+++ b/Movie-app/src/index.css
@@ -2,6 +2,6 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
-  background-color: #000;
-  color:#fff;
+  /* background-color: #000;
+  color:#fff; */
 }
