--- a/Movie-app/src/components/Header.css
+++ b/Movie-app/src/components/Header.css
@@ -51,3 +51,17 @@
   font-size: 16px;
   pointer-events: none;
 }
+.login-btn{
+    margin-right:15px;
+    padding:10px;
+    width:150px;
+    font-size: 20px;
+    border-radius:8px;
+    cursor:pointer;
+}
+.login-btn a{
+    text-decoration: none;
+}
+.login-btn:hover{
+    background-color:#ff0000;
+}
