--- a/Movie-app/src/components/Footer.css
+++ b/Movie-app/src/components/Footer.css
@@ -1,11 +1,10 @@
 .footer {
   background-color: #000;
-  margin-top: 30px;
-  position: relative;
-  bottom: 0;
+  margin-top: 45px;
   padding: 10px;
-  position: fixed;
   width: 100%;
+box-sizing: border-box;
+
 }
 .footer h3 {
   font-size: 25px;
