--- a/Movie-app/src/components/Header.css
+++ b/Movie-app/src/components/Header.css
@@ -3,6 +3,9 @@
     display:flex;
     align-items:center;
     justify-content:space-between;
+    position:sticky;
+    top:0;
+    z-index:100;
 }
 .logo{
     color:#ff0000;
