--- a/Movie-app/src/CSS/PopularMovies.css
+++ b/Movie-app/src/CSS/PopularMovies.css
@@ -9,6 +9,7 @@
   gap: 1rem;
   scroll-behavior: smooth;
   padding-bottom: 1rem;
+  margin-top:10px;
 }
 
 /* Hide scrollbar but allow scrolling */
