--- a/Movie-app/src/CSS/TrendingMovies.css
+++ b/Movie-app/src/CSS/TrendingMovies.css
@@ -2,6 +2,9 @@
   color: #ffffff;
   margin-top: 20px;
 }
+.home h1 a{
+  color:#fff;
+}
 /* Carousel container */
 .trending-movies-container {
   display: flex;
@@ -9,6 +12,7 @@
   gap: 1rem;
   scroll-behavior: smooth;
   padding-bottom: 1rem;
+  margin-top:10px;
 }
 
 /* Hide scrollbar but allow scrolling */
