--- a/Movie-app/src/components/Header.css
+++ b/Movie-app/src/components/Header.css
@@ -1,44 +1,51 @@
-.navbar{
-    background-color:#F7F7F7;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    position:sticky;
-    top:0;
-    z-index:100;
+.navbar {
+  background-color: #F7F7F7;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
-.logo{
-    color:#ff0000;
-    font-weight:bold;
-    padding:15px;
-    margin-left: 10px;
+
+.logo {
+  color: #ff0000;
+  font-weight: bold;
+  padding: 15px;
+  margin-left: 10px;
 }
-.nav-links{
-    display:flex;
-    padding:25px;
-    margin-right: 10px;
-    color:#000;
-    gap:20px;
+
+.nav-links {
+  display: flex;
+  padding: 25px;
+  margin-right: 10px;
+  color: #000;
+  gap: 20px;
 }
-.nav-links a{
-    text-decoration:none;
-    color:#000;
-    font-size: 20px;
+
+.nav-links a {
+  text-decoration: none;
+  color: #000;
+  font-size: 20px;
 }
-.nav-links a:hover{
-    color:#ff0000;
+
+.nav-links a:hover {
+  color: #ff0000;
 }
+
 .search-bar {
   position: relative;
-  width: 400px;
+  width: 500px;
+  margin: 0 40px;
+  /* Maintains gap between logo and nav-links */
 }
 
 .search-input {
-  width: 500px;
-  padding: 10px 12px 10px 40px; 
+  width: 100%;
+  padding: 12px 14px 12px 40px;
   border-radius: 8px;
   border: 1px solid #ccc;
-  font-size: 14px;
+  font-size: 16px;
   outline: none;
 }
 
@@ -54,23 +61,25 @@
   font-size: 16px;
   pointer-events: none;
 }
-.login-btn{
-    margin-right:15px;
-    padding:10px;
-    width:150px;
-    font-size: 20px;
-    border-radius:8px;
-    cursor:pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #000;
-    background-color: #efefef;
-    border: 1px solid #ccc;
-    transition: background-color 0.3s ease;
+
+.login-btn {
+  margin-right: 15px;
+  padding: 10px;
+  width: 150px;
+  font-size: 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #000;
+  background-color: #efefef;
+  border: 1px solid #ccc;
+  transition: background-color 0.3s ease;
 }
-.login-btn:hover{
-    background-color:#ff0000;
-    color: #fff;
+
+.login-btn:hover {
+  background-color: #ff0000;
+  color: #fff;
 }
